# task_manager_zhukata_bot

./: .gitignore  Makefile  pyproject.toml
task_manager_zhukata_bot/: app.py  my_base.db
task_manager_zhukata_bot/common/: bot_cmd_list.py
task_manager_zhukata_bot/database/: engine.py  models.py  orm_query.py
task_manager_zhukata_bot/filters/: chat_types.py
task_manager_zhukata_bot/handlers/: admin_private.py  user_private.py
task_manager_zhukata_bot/keyboards/: reply.py
